<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/item_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="39dp"
            android:layout_height="39dp"
            android:backgroundTint="#0F0303"
            app:cardCornerRadius="20dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_netflix" />

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/netflix"
                android:textColor="#000000"
                android:textSize="16sp"
                app:fontFamily="@font/rubik_medium" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/month_subscription"
                android:textColor="#BDBDBD"
                android:textSize="13sp"
                app:fontFamily="@font/quicksand_medium" />

        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/sum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_12"
            android:textColor="#363853"
            android:textSize="16sp"
            app:fontFamily="@font/rubik" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>