<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="33dp"
            android:layout_marginTop="6dp"
            android:text="@string/wallet"
            android:textColor="#130138"
            android:textSize="24sp"
            app:fontFamily="@font/rubik_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/profile" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="33dp"
            android:layout_marginTop="4dp"
            android:text="@string/active"
            android:textColor="#BDBDBD"
            android:textSize="16sp"
            app:fontFamily="@font/quicksand_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <ImageView
            android:id="@+id/profile"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="32dp"
            android:src="@drawable/profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcd"
            android:layout_width="346dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:backgroundTint="#5B259F"
            app:cardCornerRadius="50dp"
            app:layout_constraintEnd_toEndOf="@id/profile"
            app:layout_constraintStart_toStartOf="@id/description"
            app:layout_constraintTop_toBottomOf="@id/description">


            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="-27dp"
                android:src="@drawable/cycle" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ring"
                android:layout_width="143dp"
                android:layout_height="143dp"
                android:layout_gravity="end"
                android:layout_marginTop="58dp"
                android:layout_marginEnd="-44dp"
                android:layout_marginBottom="-58dp"
                android:src="@drawable/ring" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="44dp"
                    android:layout_marginTop="45dp"
                    android:text="@string/balance"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:fontFamily="@font/quicksand_bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/money"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/balance"
                    android:layout_alignStart="@id/balance"
                    android:layout_marginBottom="44dp"
                    android:text="@string/money"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    app:fontFamily="@font/quicksand_bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/balance"
                    android:layout_marginStart="80dp"
                    android:layout_toEndOf="@id/balance"
                    android:text="@string/card"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:fontFamily="@font/quicksand_bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/name_bank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/card"
                    android:layout_alignStart="@id/card"
                    android:text="@string/name_bank"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    app:fontFamily="@font/quicksand_bold" />

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>


        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="33dp"
            android:layout_marginTop="40dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@id/mcd"
            app:layout_constraintStart_toStartOf="@id/mcd"
            app:layout_constraintTop_toBottomOf="@id/mcd">

            <LinearLayout
                android:id="@+id/ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/transferMCD"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:backgroundTint="@color/white"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="8dp"
                    app:layout_constraintStart_toStartOf="@id/title"
                    app:layout_constraintTop_toBottomOf="@id/mcd"
                    app:strokeColor="@color/white">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:src="@drawable/ic_transfer" />

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:text="@string/transfer"
                    android:textColor="#8438FF"
                    android:textSize="13sp"
                    app:fontFamily="@font/quicksand_medium" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/exportMCD"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:backgroundTint="@color/white"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="8dp"
                    app:layout_constraintEnd_toStartOf="@id/moneyMCD"
                    app:layout_constraintStart_toEndOf="@id/transferMCD"
                    app:layout_constraintTop_toBottomOf="@id/mcd"
                    app:strokeColor="@color/white">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:src="@drawable/ic_export" />

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:text="@string/payment"
                    android:textColor="#8438FF"
                    android:textSize="13sp"
                    app:fontFamily="@font/quicksand_medium" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/moneyMCD"
                    android:layout_width="48dp"
                    android:layout_height="48dp"

                    android:backgroundTint="@color/white"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="8dp"
                    app:layout_constraintEnd_toStartOf="@id/addMCD"
                    app:layout_constraintStart_toEndOf="@id/exportMCD"
                    app:layout_constraintTop_toBottomOf="@id/mcd"
                    app:strokeColor="@color/white">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:src="@drawable/ic_money" />

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:text="@string/payout"
                    android:textColor="#8438FF"
                    android:textSize="13sp"
                    app:fontFamily="@font/quicksand_medium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/addMCD"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:backgroundTint="@color/white"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="8dp"
                    app:layout_constraintEnd_toEndOf="@id/mcd"
                    app:layout_constraintStart_toEndOf="@id/moneyMCD"
                    app:layout_constraintTop_toBottomOf="@id/mcd"
                    app:strokeColor="@color/white">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:src="@drawable/ic_add" />

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:text="@string/top_up"
                    android:textColor="#8438FF"
                    android:textSize="13sp"
                    app:fontFamily="@font/quicksand_medium" />

            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/last"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/last_transaction"
            android:textColor="#130138"
            android:textSize="18sp"
            app:fontFamily="@font/rubik_medium"
            app:layout_constraintStart_toStartOf="@id/title"
            app:layout_constraintTop_toBottomOf="@id/linear" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/view_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:text="@string/view_all"
            android:textColor="#8438FF"
            android:textSize="13sp"
            app:fontFamily="@font/rubik_medium"
            app:layout_constraintEnd_toEndOf="@id/linear"
            app:layout_constraintTop_toBottomOf="@id/linear" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="33dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="31dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/navigationBottomMcd"
            app:layout_constraintTop_toBottomOf="@id/last"
            tools:listitem="@layout/item" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/navigationBottomMcd"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:layout_marginStart="33dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="31dp"
            android:backgroundTint="#2F1155"
            app:cardCornerRadius="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/profile"
            app:layout_constraintStart_toStartOf="@id/title">

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/navigationView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:menu="@menu/bottom_navigation" />

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>

